Committing TCM Project - Prakash

--- a/tcm/modules/web/src/main/webapp/resources/invessence/css/invessence.css
+++ b/tcm/modules/web/src/main/webapp/resources/invessence/css/invessence.css
@@ -198,8 +198,56 @@ table.jqplot-table-legend, table.jqplot-cursor-legend {
 {
     width: 80px !important;
 }
+/*Prakash - Advisor*/
+@media (max-width: 550px) {
+	.PenelFilter > .ui-selectonebutton > .ui-button > .ui-button-text {
+	padding: 5px!important;
+}
 
+.layout-portlets-box {
+    padding: 0;
+    width: 100%;
+}
+
+.ListOfAccountsTable > .ui-datatable-tablewrapper > table > thead > tr > th > .ui-column-title {
+	font-size: 12px;
+}
+
+.ListOfAccountsTable > .ui-datatable-tablewrapper > table > thead > tr > th > .ui-column-title, 
+.ListOfAccountsTable > .ui-datatable-tablewrapper > table > tbody > tr > td {
+	font-size: 11.5px;
+}
+.ListOfAccountsTable > .ui-datatable-tablewrapper > table > thead > tr > th > .ui-sortable-column-icon {
+	margin-left:0px!important;
+	background-size: 75%!important;
+}
+}
+
+@media (max-width: 400px) {
+	.HeaderTableBlock > h2 {
+    text-align: center;
+    float: none;
+}
+	
+	.PenelFilter {
+	width: 100%;
+    text-align: center;
+    margin-top: 35px;
+	}
+}
+
+/**/
 /*Prakash*/
+
+.HeaderTableBlock > h2{
+	position: relative;
+	top: 15px;
+}
+
+.HeaderTableBlock > .AdvisorFilter {
+	/*text-align: center;*/
+}
+
 .StepsQuestionsFS {
 	font-size: 16px!important;
 	}
@@ -271,7 +319,7 @@ table.jqplot-table-legend, table.jqplot-cursor-legend {
 
 @media (max-width: 960px) and (min-width: 640px) {
 	.mobileFullWidth {
-   // display: inline;
+   /* display: inline;*/
 }
 	
 	.UsernameDashboard {
