--- a/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -110,7 +110,7 @@ img.riskImage:hover {
 
 /*Prakash - Advisor Page*/
 .AdvUserName, .AdvVisitorStat {
-// font-size : 18 px;
+/*font-size : 18 px;*/
     margin: 8px 0 !important;
 }
 
@@ -232,8 +232,104 @@ img.riskImage:hover {
 }
 
 /**/
+/*Prakash - Projection chart slider*/
+@media (min-width: 750px) and (max-width: 850px) {
+	.ProjectionChartRadioAssetsLabel {
+    font-size: 11px!important;
+    padding: 0 10px!important;
+}
 
+.ProjectionChartRadioTable {
+	 position: relative;
+    left: 52px;
+}
+}
+
+@media (min-width: 420px) and (max-width: 500px) {
+	.ProjectionChartRadioAssetsLabel {
+    font-size: 11px!important;
+    padding: 0 0px!important;
+    width: 1px;
+    visibility: hidden;
+}
+
+.ProjectionChartRadioAssets > tbody > tr >td {
+    margin: -20px 10px!important;
+}
+.ProjectionChartRadioBlock > .stripe {
+	left: 40px!important;
+	right: 40px!important;
+}
+
+}
+
+@media (min-width: 370px) and (max-width: 420px) {
+	.ProjectionChartRadioAssetsLabel {
+    font-size: 11px!important;
+    padding: 0 0px!important;
+    width: 1px;
+    visibility: hidden;
+}
+
+.ProjectionChartRadioAssets > tbody > tr >td {
+    margin: -20px 12px!important;
+}
+.ProjectionChartRadioBlock > .stripe {
+	left: 40px!important;
+	right: 40px!important;
+}
+}
+
+@media (min-width: 320px) and (max-width: 370px) {
+	.ProjectionChartRadioAssetsLabel {
+    font-size: 7px!important;
+    padding: 0 1px!important;
+    width: 1px;
+    visibility: hidden;
+}
+
+.ProjectionChartRadioAssets > tbody > tr >td {
+    margin: -20px 12px!important;
+}
+.ProjectionChartRadioBlock > .stripe {
+	left: 40px!important;
+	right: 40px!important;
+}
+}
+/**/
 /*Prakash*/
+.ProjectionChartRadioAssets {
+	margin: 0 auto;
+}
+
+.ProjectionChartRadioAssets > tbody > tr >td {
+	position: absolute;
+	margin: -20px -10px;
+}
+
+.ProjectionChartRadioAssetsLabel {
+    font-size: 13px;
+    padding: 0 20px;
+}
+
+.ProjectionChartRadioBlock {
+    width: 692px;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+
+.ProjectionChartRadioBlock > .stripe 
+	{
+    height: 12px;
+    position: absolute;
+    left: 110px;
+    right: 110px;
+    border-radius: 5px;
+    margin-top: -6px;
+    background: linear-gradient(90deg, #2196F3,#2196F3,#ef5350, #ef5350);
+}
+
+
 .beneficiaryAdd > .fa {
 	font-size: 22px!important;
 	padding: 0 3px;
@@ -316,7 +412,7 @@ Panel-UI > div {
 .tcm-graphType {
     font-size: 16px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.14);
-// border-radius : 20px 0 0 20px;
+/* border-radius : 20px 0 0 20px;*/
     padding: 5px 0px;
     position: relative;
     right: 8px;
@@ -327,7 +423,7 @@ Panel-UI > div {
     .tcm-graphType {
         font-size: 16px;
         box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.14);
-    // border-radius : 20px 20px 20px 20px;
+    /* border-radius : 20px 20px 20px 20px;*/
         padding: 5px 0px;
         position: relative;
         top: 5px;
@@ -674,7 +770,7 @@ body {
     background: white;
     padding-bottom: 15px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25);
-// padding : 15 px;
+/* padding : 15 px;*/
 }
 
 /*fundAccountRemove*/
@@ -1119,12 +1215,12 @@ h3 {
 @media (min-width: 960px) and (max-width: 1300px) {
     #logo {
         height: 70px;
-    // margin-top : 4 px; /**/
+    /*margin-top : 4 px; */
     }
 
     #logo2 {
         height: 70px;
-    // margin-top : 4 px; /**/
+    /* margin-top : 4 px; */
     }
 
     .ui-steps .ui-steps-title {
@@ -1163,12 +1259,12 @@ h3 {
 @media (min-width: 730px) and (max-width: 960px) {
     #logo {
         height: 70px;
-    // margin-top : 6 px;
+    /* margin-top : 6 px;*/
     }
 
     #logo2 {
         height: 70px;
-    // margin-top : 6 px;
+    /* margin-top : 6 px;*/
     }
 
     /*vivek CSS */
@@ -1202,12 +1298,12 @@ h3 {
 @media (min-width: 640px) and (max-width: 730px) {
     #logo {
         height: 70px;
-    // margin-top : 4 px; /**/
+    /* margin-top : 4 px; */
     }
 
     #logo2 {
         height: 70px;
-    // margin-top : 4 px; /**/
+    /* margin-top : 4 px; */
     }
 
     .ui-steps .ui-steps-title {
@@ -1251,12 +1347,12 @@ h3 {
 @media (min-width: 480px) and (max-width: 640px) {
     #logo {
         height: 40px;
-    // margin-top : 11 px;
+    /* margin-top : 11 px;*/
     }
 
     #logo2 {
         height: 40px;
-    // margin-top : 11 px;
+    /* margin-top : 11 px;*/
     }
 
     /**/
@@ -1331,12 +1427,12 @@ h3 {
 @media (min-width: 220px) and (max-width: 480px) {
     #logo {
         height: 40px;
-    // margin-top : 6 px;
+    /* margin-top : 6 px;*/
     }
 
     #logo2 {
         height: 40px;
-    // margin-top : 6 px;
+    /* margin-top : 6 px;*/
     }
 
     .ui-steps .ui-steps-title {
