Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
@@ -47,7 +47,7 @@
 
                     <ui:fragment rendered="#{! webutil.hasAccess('ADVISOR')}">
                     <li class="fa fa-ellipsis-v menu-separator"></li>
-                    <li>
+                    <li style="margin-bottom: 20px;">
                             <a class="Animated05 CursPointer" href="http://www.teamviewer.com/link/?url=505374&amp;id=35279493">
                                 <i class="fa fa-question-circle"></i> Help Desk<i class="fa fa-chevron-down Fs14 Fright ShowOnMobile"></i>
                             </a>
