--- a/tcm/modules/web/src/main/webapp/resources/spark-layout/css/custom.css
+++ b/tcm/modules/web/src/main/webapp/resources/spark-layout/css/custom.css
@@ -45,9 +45,9 @@
 	border: 1px solid #f2f2f2!important;
 }
 
-.ui-inputtext {
+/* .ui-inputtext {
 	border-bottom: 1px solid #f2f2f2!important;
-}
+} */
 
 .ui-inputfield {
 	font-size: 18px!important;
