--- a/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -251,8 +251,9 @@ img.riskImage:hover {
 
 @media (min-width: 420px) and (max-width: 550px) {
 	.ProjectionChartRadioLabelRow {
-  display: none;
+  /* display: none; */
 }
+
 
 
 .ProjectionChartRadioBlock > .stripe {
@@ -262,9 +263,27 @@ img.riskImage:hover {
 
 }
 
-@media (min-width: 370px) and (max-width: 420px) {
+@media (min-width: 370px) and (max-width: 425px) {
+	.stripe {
+	display: none;
+	}
+	
 	.ProjectionChartRadioLabelRow {
-  display: none;
+  /* display: none; */
+  float: right;
+}
+
+.ProjectionChartRadioTable {
+	display: inline;
+}
+
+.ProjectionChartRadioTable > tbody > tr {
+	float: left;
+}
+
+.ProjectionChartRadioTable > tbody > tr> td {
+    text-align: center;
+    display: table;
 }
 
 .ProjectionChartRadioAssets > tbody > tr >td {
@@ -277,8 +296,26 @@ img.riskImage:hover {
 }
 
 @media (min-width: 320px) and (max-width: 370px) {
+	.stripe {
+	display: none;
+	}
+	
 	.ProjectionChartRadioLabelRow {
-  display: none;
+  /* display: none; */
+  float: right;
+}
+
+.ProjectionChartRadioTable {
+	display: inline;
+}
+
+.ProjectionChartRadioTable > tbody > tr {
+	float: left;
+}
+
+.ProjectionChartRadioTable > tbody > tr> td {
+    text-align: center;
+    display: table;
 }
 
 .ProjectionChartRadioAssets > tbody > tr >td {
@@ -291,6 +328,21 @@ img.riskImage:hover {
 }
 /**/
 /*Prakash*/
+
+.getStartedBtn > span {
+	background:#025d3c!important;
+}
+
+.loginStartedBtn > span {
+	background:#919d9d!important;
+}
+
+.BeneficiaryEditPanel {
+float: none!important;
+margin: 0 auto!important;
+padding: 10px 30px 10px 11px;box-shadow: 0px 0px 7px #ECECEC;
+    border-radius: 10px;
+}
 
 .booleanBtnCustom > .ui-icon {
 	background-image: url("/javax.faces.resource/images/booleanWhiteIcon.png.xhtml?ln=tcm")!important;
@@ -1509,7 +1561,7 @@ h3 {
     .invInputText {
         background-color: transparent;
         border: 0px none;
-        border-bottom: solid 1px #465b65;
+        border-bottom: solid 1px #F2F2F2;
         font-size: 14px;
         text-align: center;
     }
