--- a/tcm/modules/web/src/main/webapp/template/common/spark/nolayout.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/spark/nolayout.xhtml
@@ -11,7 +11,7 @@
 
     <p:ajaxStatus style="width:128px;height:128px;position:fixed;right:5px;bottom:5px">
         <f:facet name="start">
-            <p:graphicImage name="images/preloader.gif" library="spark_layout"/>
+            <p:graphicImage name="demo/images/preloader.gif"/>
         </f:facet>
 
         <f:facet name="complete">
