--- a/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -21,6 +21,11 @@
     }
 }
 
+img.atCheckMarkImg {
+    height: 20px;
+    width: 20px;
+}
+
 img.riskImage {
     height: 190px;
     opacity: 0.5;
